syntax = "proto3";

package appootb.secret;

import "appootb/permission/method.proto";
import "google/protobuf/timestamp.proto";

option cc_enable_arenas = true;
option optimize_for = SPEED;

option csharp_namespace = "Secret";
option go_package = "github.com/appootb/substratum/proto/go/secret";
option java_multiple_files = true;
option java_outer_classname = "CredentialProto";
option java_package = "com.appootb.secret";
option objc_class_prefix = "CPB";
option php_namespace = "Appootb\\Proto\\Secret";


// Secret type.
enum Type {
  CLIENT = 0; // For client usage
  SERVER = 1; // For server usage
}

// Token algorithm
enum Algorithm {
  None  = 0; // None
  HMAC  = 1; // HMAC
  RSA   = 2; // RSA-PKCS
  PSS   = 3; // RSA-PSS
  ECDSA = 4; // ECDSA
  EdDSA = 5; // EdDSA
}

// Token secret info.
message Info {
  Type      type      = 1; // Secret type
  Algorithm algorithm = 2; // Secret algorithm

  string issuer  = 3; // Token issuer
  uint64 account = 4; // Account ID
  int64  key_id  = 5; // Key ID

  repeated string roles   = 6; // Account roles

  appootb.permission.method.Subject subject = 11; // Token subject

  google.protobuf.Timestamp issued_at  = 21; // Issued timestamp
  google.protobuf.Timestamp expired_at = 22; // Expired timestamp
}
